--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
+    "snapsvg": "^0.5.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
