--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
+    "redis": "^4.7.0",
     "snapsvg": "^0.5.1",
     "uuid": "^10.0.0"
   },
