--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=senselive.postgres.database.azure.com
-DB_USER=kaushal
-DB_PASSWORD=Kaushal@123
-DB_NAME=ems
+DB_HOST=data.senselive.in
+DB_USER=senselive
+DB_PASSWORD=SenseLive@2025
+DB_NAME=senselive_db
 DB_PORT=5432
 
 API_BASE_URL='http://localhost:3000'
